# cookiecutter_data_science

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config_proj.json  extensions.json  pyproject.toml  settings.json  {% if cookiecutter.package_manager == 'conda' %}environment.yml{% elif cookiecutter.package_manager == 'poetry' %}{% endif %}  {% if cookiecutter.package_manager == 'mamba' %}environment.yml{% elif cookiecutter.package_manager == 'poetry' %}{% endif %}
