[tool.poetry]
name = "{{ cookiecutter.repo_name | replace("-", "_") }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
packages = [{include = "{{ cookiecutter.project_name }}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
{% if cookiecutter.package_manager == 'poetry' %}
pdoc3 = "^0.11.5"
flake8-pyproject = "^1.2.3"
flake8 = "^7.1.1"
black = "^24.10.0"
{% if cookiecutter.mypy == 'y' %}
mypy = "^1.14.0"
mypy-extensions = "^1.0.0"
{% endif %}
notebook = "^7.3.2"
numpy = "^2.2.1"
matplotlib = "3.9.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"
{% endif %}


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
use_parentheses = true
known_third_party = []
force_grid_wrap = 0
extend_skip_glob = ["**/*__init__.py"]


[tool.black]
line-length = 120
include = '\.pyi?$'


[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503', 'F401', 'F841']
extend-ignore = 'E203'
max-line-length = 120
max-complexity = 10
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
exclude = ['__init__.py']


{% if cookiecutter.mypy == 'y' %}
[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
{% endif %}


[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 5
verbose = 1
generate-badge = "."
